# market-sentiment-analyzer

./: .coverage  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DASHBOARD.md  Dockerfile  MakeFile  Makefile  README.md  README_OLD.md  coverage.md  docker-compose.yaml  docker_composer.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yaml  coverage.yaml
app/: ingest.py  plots.py  public_api.py  sentiment.py  test_ingest.py  test_plots.py  test_sentiment.py  test_smoke.py  ui_streamlit.py
data/: sample_tiny.csv  sector_map.csv
market_sentiment_analyzer/: __init__.py  plots.py  public_api.py  ui_streamlit.py
scripts/: benchmark.py
test/: __init__.py  test.py  test_conf.py  test_error.py  test_ingest.py  test_ingest_working.py  test_init.py  test_plots.py  test_public_api.py  test_sentiment.py  test_smoke.py  test_ui.py  test_ui_helpers.py  test_ui_streamlit.py  test_ui_streamlit_execution.py  test_ui_streamlit_main.py  test_ui_streamlit_targeted.py  test_vader.py
