[tool.ruff]
line-length = 175
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PIE", "C4", "ARG", "RUF"]
ignore = [
  "E203",  # keep for Black compatibility on slicing
]

[tool.ruff.lint.isort]
known-first-party = ["market_sentiment_analyzer"]
combine-as-imports = true

[tool.black]
line-length = 175
target-version = ["py310"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sentiment-analyzer"
version = "0.1.0"
description = "Market Sentiment Analyzer for analysts"
requires-python = ">=3.10"
dependencies = ["pandas","pyarrow"]
readme = "README.md"
authors = [{ name = "Jerome Petit", email = "jerome.petit@outlook.com" }]
